# the-cookie-circle-api

./: .env.example  .gitignore  DATABASE_BACKUP.md  MIGRATIONS.md  README.md  pyproject.toml
.github/workflows/: backup-production-database.yml
alembic/: env.py
alembic/versions/: 001_auth_foundation.py  002_product_items_foundation.py  003_global_cost_foundation.py  004_products_foundation.py  005_product_production_foundation.py  006_collections_foundation.py  007_collection_packaging.py  008_business_orders.py  009_order_operations.py  010_order_profitability_snapshots.py  011_procurement_foundation.py  012_customer_relationship_foundation.py  (+35 more)
app/: __init__.py  main.py
scripts/: backup_database.sh  create_admin.py  seed_dev.py  seed_global_costs.py  seed_product_foundation.py  seed_realistic_business_data.py  seed_sample_product.py
tests/: test_asset_storage_service.py  test_collection_display_name.py  test_collection_packaging_fee.py  test_consumption_demand.py  test_customer_delivery_date_service.py  test_delivery_schedule_copy.py  test_email_templates.py  test_faq_schedule.py  test_fefo_allocation.py  test_ga4_measurement_protocol_service.py  test_inventory_movements.py  test_inventory_readiness.py  test_marketing_attribution.py  test_order_delivery_cost.py  test_order_packaging_snapshots.py  test_payment_pre_integration.py  test_phone_validation.py  test_premium_packaging_copy.py  test_product_duplicate_name.py  test_purchase_receipt_confirm.py  test_recipe_calculator_service.py  test_security_utils.py  test_whatsapp_order_message_service.py
(+328 files in other folders)
